# PerforatedAI-Quantization-Experiment

./: .gitignore  Dendritic Quantization Benchmark Plan.md  README.md  SCRIPT_USAGE.md  pyproject.toml
PAI/: PAI_config.json
information/: CLI_DIAGRAMS.md  DOCUMENTATION.md  Dendritic Quantization Benchmark 15 New Models & Extended Experiments.md  Dendritic Quantization Benchmark Plan.md  MODEL_REFERENCE.md  SCRIPT_ARCHITECTURE.md  SCRIPT_USAGE.md  last_run.txt
scripts/: uv_dqb_argcomplete
src/dendritic_benchmark/: __init__.py  benchmark.py  cli.py  compat.py  data.py  log_utils.py  models.py  pipeline.py  plots.py  results.py  specs.py  training.py
